Fixed bug with incorrect code wrapping

--- a/default.css
+++ b/default.css
@@ -5,29 +5,27 @@
     color-scheme: light dark;
 }
 
-@media (prefers-color-scheme: dark) {
-    body * :not(.noPaint) {
-        color: light-dark(hsl(240, 10%, 10%), hsl(240, 90%, 90%));
-        background-color: light-dark(hsl(240, 90%, 90%), hsl(240, 20%, 20%));
-    }
+body * :not(.noPaint) {
+    color: light-dark(hsl(240, 10%, 10%), hsl(240, 90%, 90%));
+    background-color: light-dark(hsl(240, 90%, 90%), hsl(240, 20%, 20%));
+}
 
-    body {
-        background-color: light-dark(hsl(240, 90%, 90%), hsl(240, 10%, 10%));
-    }
+body {
+    background-color: light-dark(hsl(240, 90%, 90%), hsl(240, 10%, 10%));
+}
 
-    ::-moz-selection {
-        background-color: light-dark(hsl(240, 0%, 80%), hsl(240, 0%, 20%));
-        background-color: light-dark(hsl(240, 0%, 20%), hsl(240, 0%, 80%));
-    }
+::-moz-selection {
+    background-color: light-dark(hsl(240, 0%, 80%), hsl(240, 0%, 20%));
+    background-color: light-dark(hsl(240, 0%, 20%), hsl(240, 0%, 80%));
+}
 
-    ::selection {
-        background-color: light-dark(hsl(240, 0%, 80%), hsl(240, 0%, 20%));
-        background-color: light-dark(hsl(240, 0%, 20%), hsl(240, 0%, 80%));
-    }
+::selection {
+    background-color: light-dark(hsl(240, 0%, 80%), hsl(240, 0%, 20%));
+    background-color: light-dark(hsl(240, 0%, 20%), hsl(240, 0%, 80%));
+}
 
-    .active {
-        background-color: light-dark(hsl(240, 70%, 70%), hsl(240, 30%, 30%));
-    }
+.active {
+    background-color: light-dark(hsl(240, 70%, 70%), hsl(240, 30%, 30%));
 }
 
 * {
